--- a/app/src/main/res/layout/activity_pengetahuan.xml
+++ b/app/src/main/res/layout/activity_pengetahuan.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:background="#BDBDBD"
+    android:id="@+id/swipeRefreshLayoutPengetahuan"
     android:layout_height="match_parent"
     tools:context=".pengetahuan">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/anjing"
+        android:id="@+id/pengetahuanRv"
         android:layout_margin="2dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-</LinearLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
