--- a/app/src/main/res/layout/upload_materi.xml
+++ b/app/src/main/res/layout/upload_materi.xml
@@ -33,7 +33,7 @@
         <EditText
             android:id="@+id/editText"
             android:layout_width="380dp"
-            android:layout_height="299dp"
+            android:layout_height="150dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/bg_kuis"
             android:gravity="top|start"
@@ -46,6 +46,42 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etBabMateri" />
+
+        <TextView
+            android:id="@+id/tvHargaMateri"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="44dp"
+            android:text="Harga Materi : "
+            android:textSize="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/selectFile"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <EditText
+            android:id="@+id/etHargaMateri"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="108dp"
+            android:background="@drawable/bg_kuis"
+            android:hint="Harga Materi"
+            android:inputType="text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.644"
+            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/editText" />
+
+        <CheckBox
+            android:id="@+id/isPaidMateri"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Materi Berbayar"
+            app:layout_constraintBottom_toTopOf="@+id/textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.061"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editText"
+            app:layout_constraintVertical_bias="0.562" />
 
         <EditText
             android:id="@+id/etBabMateri"
@@ -73,10 +109,10 @@
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.973"
+            app:layout_constraintHorizontal_bias="0.969"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editText"
-            app:layout_constraintVertical_bias="0.091" />
+            app:layout_constraintVertical_bias="0.645" />
 
         <Button
             android:id="@+id/button5"
